--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
